# swag/docs/swagger.json
@@ -17,6 +17,56 @@
     "host": "localhost:8070",
     "basePath": "/api",
     "paths": {
+        "/genres": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Create Genre",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Genres"
+                ],
+                "summary": "Create Genre",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "name",
+                        "name": "name",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "file",
+                        "description": "Image genre",
+                        "name": "image",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/db.Genre"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/res.ErrSwaggerJson"
+                        }
+                    }
+                }
+            }
+        },
         "/singers": {
             "get": {
                 "description": "Get list singers with page and page size (Limit-Offset)",
@@ -88,7 +138,7 @@
                     },
                     {
                         "type": "file",
-                        "description": "Image comment",
+                        "description": "Image singer",
                         "name": "image",
                         "in": "formData",
                         "required": true
@@ -117,7 +167,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Get singer with id",
+                "description": "Delete singer with id",
                 "consumes": [
                     "application/json"
                 ],
@@ -127,7 +177,7 @@
                 "tags": [
                     "Singers"
                 ],
-                "summary": "Get singer with id",
+                "summary": "Delete singer with id",
                 "parameters": [
                     {
                         "type": "integer",
@@ -351,6 +401,20 @@
         }
     },
     "definitions": {
+        "db.Genre": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "image_url": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "db.GetListSingerRow": {
             "type": "object",
             "properties": {
